servce.yml
apiVersion: v1
kind: Service
metadata:
  name: game
spec:
  type: LoadBalancer
  selector:
    app: gameapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
